dang lam do phan thuc hien danh gia

--- a/public/css/content.css
+++ b/public/css/content.css
@@ -17,3 +17,15 @@
 .toolbox {
     margin: 5px 0px 5px 0px;
 }
+
+.modal-xl {
+    min-width: 80%;
+}
+
+.modal-title {
+    font-size: 14pt;
+}
+
+*:focus {
+    outline: none !important;
+}
